--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 	  
 	  <section class="round">
         <% flash.each do |key, value| %>
-          <div class="flash <%= key %>"><%= value %></div>
+<!--          <div class="flash <%= key %>"><%= value %></div> -->
+				<%= content_tag(:div, value, :class => "flash #{key}") %>
         <% end %>
         <%= yield %>
       </section>
